--- a/action.yml
+++ b/action.yml
@@ -10,4 +10,5 @@ outputs:
     description: 'The time we greeted you'
 runs:
   using: 'node16'
-  main: 'index.js'
+  main: 'dist/index.js' #alternative to call build dist by ncc
+  # main: 'index.js'  # call index.js with node_module without build
